tests/ui/conf_french_blacklisted_name.stderr
error: use of a blacklisted/placeholder name `toto`
 --> $DIR/conf_french_blacklisted_name.rs:9:9
  |
9 | fn test(toto: ()) {}
  |         ^^^^
  |
note: lint level defined here
 --> $DIR/conf_french_blacklisted_name.rs:7:9
  |
7 | #![deny(blacklisted_name)]
  |         ^^^^^^^^^^^^^^^^

error: use of a blacklisted/placeholder name `toto`
  --> $DIR/conf_french_blacklisted_name.rs:12:9
   |
12 |     let toto = 42;
   |         ^^^^

error: use of a blacklisted/placeholder name `tata`
  --> $DIR/conf_french_blacklisted_name.rs:13:9
   |
13 |     let tata = 42;
   |         ^^^^

error: use of a blacklisted/placeholder name `titi`
  --> $DIR/conf_french_blacklisted_name.rs:14:9
   |
14 |     let titi = 42;
   |         ^^^^

error: use of a blacklisted/placeholder name `toto`
  --> $DIR/conf_french_blacklisted_name.rs:20:10
   |
20 |         (toto, Some(tata), titi @ Some(_)) => (),
   |          ^^^^

error: use of a blacklisted/placeholder name `tata`
  --> $DIR/conf_french_blacklisted_name.rs:20:21
   |
20 |         (toto, Some(tata), titi @ Some(_)) => (),
   |                     ^^^^

error: use of a blacklisted/placeholder name `titi`
  --> $DIR/conf_french_blacklisted_name.rs:20:28
   |
20 |         (toto, Some(tata), titi @ Some(_)) => (),
   |                            ^^^^

error: aborting due to 7 previous errors

